# apc-zju-uts

./: LICENSE  README.md
moped/: README.md
moped/moped/moped2/: CMakeLists.txt  moped.cpp
moped/moped/moped2/libmoped/src/: config.hpp
moped/pr_msgs/msg_gen/cpp/include/pr_msgs/: Action.h  AppletState.h  DefineLocation.h  ForceRead.h  HandOff.h  MaglevFeedback.h  MaglevSense.h  NameTypeValue.h  ObjectPose.h  ObjectPoseList.h  OccGrid3D.h  PixelCoordinate.h  PixelCoordinateList.h  QR.h  RailsState.h  RotatedLaserScan.h  SignalAction.h  SignalActionFeedback.h  SignalActionGoal.h  SignalActionResult.h  SignalFeedback.h  SignalGoal.h  SignalResult.h  Trimesh.h  Vector3D.h  WAMJointState.h  herbAction.h  herbGoal.h  (+7 more)
moped/pr_msgs/msg_gen/lisp/: ObjectPose.lisp  ObjectPoseList.lisp  _package.lisp  _package_ObjectPose.lisp  _package_herbFeedback.lisp  _package_herbGoal.lisp  _package_herbResult.lisp  herbAction.lisp  herbActionFeedback.lisp  herbActionGoal.lisp  herbActionResult.lisp  herbFeedback.lisp  herbGoal.lisp  herbResult.lisp  pr_msgs-msg.asd
moped/pr_msgs/src/pr_msgs/msg/: _ObjectPose.py  _ObjectPoseList.py  __init__.py  _herbAction.py  _herbActionFeedback.py  _herbActionGoal.py  _herbActionResult.py  _herbFeedback.py  _herbGoal.py  _herbResult.py
moped/pr_msgs/src/pr_msgs/srv/: _AskUser.py  __init__.py
moped/pr_msgs/srv_gen/lisp/: AskUser.lisp  _package.lisp  _package_AskUser.lisp  pr_msgs-srv.asd
pre_processing/shelf_processing/: CMakeLists.txt  main.cpp  shelf_processing.pro
pre_processing/shelf_processing/include/: edge_detection.hpp  select_bin.hpp
(+6 files in other folders)
